--- a/layout/_partial/scripts.ejs
+++ b/layout/_partial/scripts.ejs
@@ -132,3 +132,5 @@
       }());
   </script>
 <% } %>
+
+<script defer src="https://cdn.jsdelivr.net/gh/no2y/jslib@main/lanterns/lanterns.min.js"></script>
