--- a/source/css/_colors/custom.styl
+++ b/source/css/_colors/custom.styl
@@ -6,10 +6,11 @@ $color-border = #908d8d
 $color-scrollbar = #999
 $color-meta = #908d8d
 $color-meta-code = #908d8d
-$color-link = rgba(212, 128, 170, 1)
+$color-link = #6F3381
 $color-text = #c9cacc
 $color-accent-3 = #cccccc
 $color-accent-2 = #eeeeee
-$color-accent-1 = #2bbc8a
-$color-quote = #ccffb6
+$color-accent-1 = #994639
+// https://nipponcolors.com/#kuriume
+$color-quote = #904840
 $highlight = hexo-config("highlight") || "rainbow"
