--- a/source/css/_colors/warm.styl
+++ b/source/css/_colors/warm.styl
@@ -2,14 +2,14 @@ $color-background = #1d1f21
 $color-footer-mobile-1 = lighten($color-background, 2%)
 $color-footer-mobile-2 = lighten($color-background, 10%)
 $color-background-code = lighten($color-background, 2%)
-$color-border = #908d8d
-$color-scrollbar = #999
-$color-meta = #908d8d
-$color-meta-code = #908d8d
-$color-link = rgba(212, 128, 170, 1)
+$color-border = #704214
+$color-scrollbar = #8B4513
+$color-meta = #A0522D
+$color-meta-code = #A0522D
+$color-link = #994639
 $color-text = #c9cacc
-$color-accent-3 = #cccccc
-$color-accent-2 = #eeeeee
-$color-accent-1 = #2bbc8a
-$color-quote = #ccffb6
+$color-accent-3 = #CD853F
+$color-accent-2 = #D2B48C
+$color-accent-1 = #DEB887
+$color-quote = #904840
 $highlight = hexo-config("highlight") || "rainbow"
